Fixed overflow of page.
Added destructive methods to unit conversion for addition and multiplication.

Removed default showing of all controls

Removed random "//" from body text

--- a/WebClient/Content/control.css
+++ b/WebClient/Content/control.css
@@ -7,7 +7,9 @@
 .leaflet-touch .leaflet-control-layers {  box-shadow: none; border: 0px solid #fff;}
 .leaflet-touch .leaflet-control-domains {  box-shadow: none }
 .leaflet-touch .leaflet-control-simulation { box-shadow: none }
-.leaflet-touch .leaflet-control-simulation { box-shadow: none }
+.leaflet-touch .leaflet-control-pv { box-shadow: none }
+
+
 .leaflet-touch [class^="leaflet-control-"] > a {
   box-shadow: 0 1px 5px rgba(0,0,0,0.4);
   border-radius: 5px;
